manifest/40-loki.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dragz
  name: loki-service
spec:
  ports:
    - port: 3100
      name: http
  selector:
    app: loki
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: dragz
  name: loki-stateful-set
spec:
  serviceName: loki-service
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.3
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/loki/loki.yaml
          ports:
            - containerPort: 3100
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: data
              mountPath: /loki
      volumes:
        - name: config
          configMap:
            name: loki-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
---
